Update global banner page to use SystemSettings

--- a/templates/admin/dashboard.twig
+++ b/templates/admin/dashboard.twig
@@ -60,7 +60,7 @@
         <ul>
             <li><a href="{{ uriFor('super.system') }}" class="btn">Build System Status</a></li>
             <li><a href="{{ uriFor('super.caches') }}" class="btn">Cache Management</a></li>
-            <li><a href="{{ uriFor('super.message') }}" class="btn">Global Message</a></li>
+            <li><a href="{{ uriFor('super.banner') }}" class="btn">Global Banner</a></li>
         </ul>
 
         <h3>Server Information</h3>
