--- a/templates/admin/super.global_banner.twig
+++ b/templates/admin/super.global_banner.twig
@@ -64,7 +64,7 @@
 
 {% block form %}
     <h2>Global Banner</h2>
-    <form action="" method="post">
+    <form method="post">
         <ul class="form-fields">
             <li>
                 <label for="message">Global Message</label>
